syntax = "proto3";

package user;

message UserModel {
  int32 id = 1;
  string userName = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse { UserModel user = 1; }

message GetUserRequest {

  optional int32 id = 1;
  optional string userName = 2;
}

message GetUserResponse { UserModel user = 1; }

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc getUserInfo(GetUserRequest) returns (GetUserResponse);
}